--- a/Dog Pregnancy Calculator/en.lproj/MainStoryboard.storyboard
+++ b/Dog Pregnancy Calculator/en.lproj/MainStoryboard.storyboard
@@ -1,23 +1,132 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2519" systemVersion="12A206j" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2844" systemVersion="12C3104" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1856"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1930"/>
     </dependencies>
     <scenes>
-        <!--class Prefix:identifier View Controller-->
+        <!--Dog Pregnancy Calculator View Controller-->
         <scene sceneID="4">
             <objects>
                 <viewController id="2" customClass="DogPregnancyCalculatorViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5">
                         <rect key="frame" x="0.0" y="20" width="768" height="1004"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="sIg-Jb-63A">
+                                <date key="date" timeIntervalSinceReferenceDate="379039950.39352101">
+                                    <!--2013-01-05 00:52:30 +0000-->
+                                </date>
+                                <timeZone key="timeZone" name="America/Los_Angeles">
+                                    <mutableData key="data">
+VFppZgAAAAAAAAAAAAAAAAAAAAAAAAAEAAAABAAAAAAAAAC5AAAABAAAABCepkign7sVkKCGKqChmveQ
+y4kaoNIj9HDSYSYQ1v50INiArZDa/tGg28CQENzes6DdqayQ3r6VoN+JjpDgnneg4WlwkOJ+WaDjSVKQ
+5F47oOUpNJDmR1gg5xJREOgnOiDo8jMQ6gccIOrSFRDr5v4g7LH3EO3G4CDukdkQ76/8oPBxuxDxj96g
+8n/BkPNvwKD0X6OQ9U+ioPY/hZD3L4Sg+CiiEPkPZqD6CIQQ+viDIPvoZhD82GUg/chIEP64RyD/qCoQ
+AJgpIAGIDBACeAsgA3EokARhJ6AFUQqQBkEJoAcw7JAHjUOgCRDOkAmtvyAK8LCQC+CvoAzZzRANwJGg
+DrmvEA+priAQmZEQEYmQIBJ5cxATaXIgFFlVEBVJVCAWOTcQFyk2IBgiU5AZCRggGgI1kBryNKAb4heQ
+HNIWoB3B+ZAesfigH6HbkCB2KyAhgb2QIlYNICNq2hAkNe8gJUq8ECYV0SAnKp4QJ/7toCkKgBAp3s+g
+KupiECu+saAs036QLZ6ToC6zYJAvfnWgMJNCkDFnkiAycySQM0d0IDRTBpA1J1YgNjLokDcHOCA4HAUQ
+OOcaIDn75xA6xvwgO9vJEDywGKA9u6sQPo/6oD+bjRBAb9ygQYSpkEJPvqBDZIuQRC+goEVEbZBF89Mg
+Ry2KEEfTtSBJDWwQSbOXIErtThBLnLOgTNZqkE18laBOtkyQT1x3oFCWLpBRPFmgUnYQkFMcO6BUVfKQ
+VPwdoFY11JBW5TogWB7xEFjFHCBZ/tMQWqT+IFvetRBchOAgXb6XEF5kwiBfnnkQYE3eoGGHlZBiLcCg
+Y2d3kGQNoqBlR1mQZe2EoGcnO5BnzWagaQcdkGmtSKBq5v+Qa5ZlIGzQHBBtdkcgbq/+EG9WKSBwj+AQ
+cTYLIHJvwhBzFe0gdE+kEHT/CaB2OMCQdt7roHgYopB4vs2gefiEkHqer6B72GaQfH6RoH24SJB+XnOg
+f5gqkAABAAECAwEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEA
+AQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEA
+AQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEA
+AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
+</mutableData>
+                                </timeZone>
+                            </datePicker>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dIh-9T-irI">
+                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="Md5-Wb-ePi"/>
+                                    <constraint firstAttribute="width" constant="842" id="kHI-Iz-s6I"/>
+                                </constraints>
+                                <string key="text">Welcome to the dog pregnancy calculator app. The purpose of this app is to give you an approximate date of when your dog is due to have puppies. All you need to do is use the date picker below to input the date that your dog was mated and this app will give you an approximate date that you can expcect some puppies!</string>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <navigationBar contentMode="scaleToFill" barStyle="blackOpaque" translatesAutoresizingMaskIntoConstraints="NO" id="CwV-lh-K78">
+                                <items>
+                                    <navigationItem title="Dog Pregnancy Calculator" id="qRX-c6-aYt"/>
+                                </items>
+                            </navigationBar>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Instructions" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C1H-GH-il9">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="113" id="vx4-5j-Onz"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Date of Mating" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AnX-Xo-cHP">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="278" id="M8y-QW-YEw"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="26"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mb5-Uz-89z">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="ayz-hy-ULF"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" size="button"/>
+                                <state key="normal" title="Calculate due date">
+                                    <color key="titleColor" red="0.19607843137254902" green="0.30980392156862746" blue="0.52156862745098043" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="calculateDueDateBtn:" destination="2" eventType="touchUpInside" id="lEf-Xb-qk0"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="C1H-GH-il9" firstAttribute="leading" secondItem="dIh-9T-irI" secondAttribute="leading" type="default" id="2lf-GM-FQq"/>
+                            <constraint firstAttribute="bottom" secondItem="mb5-Uz-89z" secondAttribute="bottom" constant="312" id="3zr-EW-qin"/>
+                            <constraint firstItem="mb5-Uz-89z" firstAttribute="leading" secondItem="AnX-Xo-cHP" secondAttribute="leading" type="default" id="6d6-oq-cz1"/>
+                            <constraint firstItem="CwV-lh-K78" firstAttribute="leading" secondItem="5" secondAttribute="leading" type="default" id="Knr-J3-zXH"/>
+                            <constraint firstItem="CwV-lh-K78" firstAttribute="top" secondItem="5" secondAttribute="top" type="default" id="NK8-4V-jBB"/>
+                            <constraint firstItem="CwV-lh-K78" firstAttribute="trailing" secondItem="5" secondAttribute="trailing" type="default" id="Rtm-On-yBJ"/>
+                            <constraint firstItem="sIg-Jb-63A" firstAttribute="centerX" secondItem="AnX-Xo-cHP" secondAttribute="centerX" type="default" id="X24-Nu-xIj"/>
+                            <constraint firstItem="C1H-GH-il9" firstAttribute="top" secondItem="5" secondAttribute="top" constant="71" id="aTj-Td-zhk"/>
+                            <constraint firstItem="sIg-Jb-63A" firstAttribute="top" secondItem="5" secondAttribute="top" constant="411" id="dkJ-z4-5IL"/>
+                            <constraint firstItem="sIg-Jb-63A" firstAttribute="trailing" secondItem="5" secondAttribute="trailing" type="default" id="evo-aU-4Kp"/>
+                            <constraint firstItem="C1H-GH-il9" firstAttribute="leading" secondItem="5" secondAttribute="leading" constant="36" id="iXZ-Rg-LDZ"/>
+                            <constraint firstItem="AnX-Xo-cHP" firstAttribute="trailing" secondItem="mb5-Uz-89z" secondAttribute="trailing" type="default" id="iz8-Sn-xI5"/>
+                            <constraint firstItem="dIh-9T-irI" firstAttribute="top" secondItem="C1H-GH-il9" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="pf5-ub-bTX"/>
+                            <constraint firstItem="AnX-Xo-cHP" firstAttribute="top" secondItem="5" secondAttribute="top" constant="364" id="yY1-w1-mnS"/>
+                            <constraint firstItem="sIg-Jb-63A" firstAttribute="leading" secondItem="5" secondAttribute="leading" type="default" id="yz3-Pc-9XU"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="datePicker" destination="sIg-Jb-63A" id="WSg-bs-EaN"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-69" y="-109"/>
         </scene>
     </scenes>
+    <classes>
+        <class className="DogPregnancyCalculatorViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/DogPregnancyCalculatorViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="calculateDueDateBtn:"/>
+                <relationship kind="outlet" name="datePicker" candidateClass="UIDatePicker"/>
+            </relationships>
+        </class>
+        <class className="NSLayoutConstraint" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar" statusBarStyle="blackTranslucent"/>
         <simulatedOrientationMetrics key="orientation"/>
